--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,15 @@
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-crypto</artifactId>
 		</dependency>
+
+
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.6.0</version> <!-- Используйте последнюю версию -->
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
